<resources>
    <string name="app_name">OnRoute</string>
    <string name="coach_screen_tap_to_pause">Tap to pause</string>
    <string name="coach_screen_swipe_right">Swipe right \n for menu</string>
    <string name="coach_screen_showcase_text">Showcase starts in</string>
    <string name="coach_screen_swipe_left">Swipe left \n for controls</string>
    <string name="coach_screen_swipe_down">Swipe down \n to minimize</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="screen_select_destination_ride_text">I\'m taking ride for</string>
    <string name="layout_select_destination_food_text">Food</string>
    <string name="layout_select_destination_others_text">Others</string>
    <string name="layout_select_destination_tourist_text">Tourist</string>
    <string name="layout_select_destination_work_text">Work</string>
    <string name="layout_select_destination_drinks_text">Drinks</string>
    <string name="layout_select_destination_travel_text">Travel</string>

    <string-array name="navDrawerItems">
        <item>Music</item>
        <item>TV</item>
        <item>Sports</item>
        <item>News</item>
        <item>Lifestyle</item>
        <item>Exclusive Offers</item>
    </string-array>

    <string-array name="navDrawerDrawables">
        <item>@drawable/drawer_note</item>
        <item>@drawable/drawer_tv</item>
        <item>@drawable/drawer_football</item>
        <item>@drawable/drawer_news</item>
        <item>@drawable/drawer_lifestyle</item>
        <item>@drawable/drawer_star</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="screen_drawer_button_about">About</string>
    <string name="screen_drawer_button_help">Help</string>
    <string name="drawer_about_message">Crafted with passion in India</string>
    <string name="now_playing">Now Playing</string>


</resources>

