<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/blurred_background"
              android:gravity="center"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewCoachScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach_screen_tap_to_pause"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/coach_circle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewCoachScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/coach_screen_swipe_right"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/coach_arrow_right"/>

        </LinearLayout>

        <LinearLayout
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/box_transparent"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorOrange"
                android:textSize="100sp"
                android:textStyle="bold"
                android:text="5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:text="@string/coach_screen_showcase_text"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewCoachScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/coach_screen_swipe_left"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/coach_arrow_left"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:layout_weight="45">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/coach_arrow_down"/>
        </LinearLayout>


        <TextView
            style="@style/TextViewCoachScreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="39"
            android:text="@string/coach_screen_swipe_down"
            />
    </LinearLayout>


</LinearLayout>